--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,21 +25,11 @@
         "project": "./tsconfig.json"
     },
     "plugins": [
+        "import",
         "react",
         "@typescript-eslint", "react-hooks"
     ],
     "rules": {
-        "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
-        "import/extensions": [
-            "error",
-            "ignorePackages",
-            {
-                "js": "never",
-                "jsx": "never",
-                "ts": "never",
-                "tsx": "never"
-            }
-        ],
         "import/prefer-default-export": "off",
         "react/function-component-definition": [
             2,
@@ -48,6 +38,28 @@
                 "unnamedComponents": "arrow-function"
             }
         ],
-        "react/react-in-jsx-scope": "off"
+        "react/react-in-jsx-scope": "off",
+        "import/extensions": [
+            "error",
+            "ignorePackages",
+            {
+                "": "never",
+                "js": "never",
+                "jsx": "never",
+                "ts": "never",
+                "tsx": "never"
+            }
+        ],
+        "react/jsx-props-no-spreading": "off",
+        "no-param-reassign": 0,
+        "import/no-extraneous-dependencies": [
+            "error",
+            {
+                "devDependencies": ["test/**"],
+                "optionalDependencies": false,
+                "peerDependencies": false
+            }
+        ],
+        "react/prop-types": "off"
     }
 }
