--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "noImplicitAny": true,
     "module": "ESNext",
     "target": "es5",
+    "lib": ["dom", "es2015"],
     "jsx": "react-jsx",
     "allowJs": true,
     "strict": true,
