--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
         "@typescript-eslint", "react-hooks"
     ],
     "rules": {
+        "consistent-return": "off",
         "linebreak-style": 0,
         "import/prefer-default-export": "off",
         "react/function-component-definition": [
