--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
     "@reduxjs/toolkit": "^2.0.1",
+    "@types/react-redux": "^7.1.33",
     "axios": "^1.6.2",
     "eslint-config-airbnb": "^19.0.4",
     "formik": "^2.4.5",
@@ -27,7 +28,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.5.0",
-    "react-redux": "^9.0.3",
+    "react-player": "^2.14.1",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.1",
     "yup": "^1.3.2"
   },
