--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
         "@typescript-eslint", "react-hooks"
     ],
     "rules": {
+        "max-len": ["error", { "code": 140 }],
         "consistent-return": "off",
         "linebreak-style": 0,
         "import/prefer-default-export": "off",
